 syntax = "proto3";

 package beer.supportly.chat;

 import "google/protobuf/empty.proto";

 message JoinRoomRequest {
   string roomId = 1;
   int64 userId = 2;
 }

 message ChatMessage {
   string roomId = 1;
   int64 senderId = 2;
   string senderDisplayName = 3;
   string message = 4;
   int64 timestamp = 5;
 }

 message LeaveRoomRequest {
   string roomId = 1;
   int64 userId = 2;
 }

 service ChatService {
   rpc JoinChatRoom(JoinRoomRequest) returns (stream ChatMessage);
   rpc SendMessage(ChatMessage) returns (google.protobuf.Empty);
   rpc LeaveChatroom(LeaveRoomRequest) returns (google.protobuf.Empty);
 }
